--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,7 +75,7 @@
 	<script type="text/javascript">
 		window.tooltips = []
 	</script>
-{%if page.use_math%}
-	{%include mathjax_support%}
-{%endif%}
+{% if page.use_math %}
+	{% include mathjax_support.html %}
+{% endif %}
 </head>
